# Bachelor-Diploma-ITMO

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
scripts/: entrypoint.sh  run.sh  tmux-cfg.yml
src/apartment_sim/: AGENTS_apartment_sim.md  package.xml  setup.cfg  setup.py
src/apartment_sim/apartment_sim/: obstacles_controller.py
src/apartment_sim/launch/: launch.py
src/nav2_mppi_controller/: AGENTS_nav2_mppi_controller.md  CMakeLists.txt  package.xml
src/nav2_mppi_controller/include/nav2_mppi_controller/critics/: target_camera_critic.hpp
src/nav2_mppi_controller/src/critics/: target_camera_critic.cpp
src/omni_behavior/: AGENTS_omni_behavior.md  CMakeLists.txt  package.xml  plugin.xml
src/omni_behavior/include/omni_behavior/: target_visible_condition.hpp
src/omni_behavior/src/: target_visible_condition.cpp
src/omni_robot/: AGENTS_omni_robot.md  package.xml  setup.cfg  setup.py
src/omni_robot/behavior_trees/: chase_target.xml
src/omni_robot/config/: layout.rviz  omni_nav2_params.yaml  slam.yaml
src/omni_robot/launch/: omni_nav2.launch.py  spawn_robot.launch.py
src/omni_robot/omni_robot/: cmd_vel_bridge.py  dummy_controller.py  odom_tf_bridge.py  scan_bridge.py  target_behavior_layer.py  target_detector.py  target_nav_bridge.py
src/omni_robot/urdf/: omni_robot.urdf.xacro
worlds/: apartment.world
