<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_behavior</name>
  <version>0.0.0</version>
  <description>Custom Nav2 Behavior Tree plugins for the omni_robot target chase pipeline.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugin.xml" />
  </export>
</package>
